--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve casca-mfe-lib-teste --configuration=development",
+    "start:staging": "ng serve casca-mfe-lib-teste --configuration=staging",
+    "start:prod": "ng serve casca-mfe-lib-teste --configuration=production",
+    "json-server": "json-server --watch mocks/json-server/db.json",
+    "start:dev:json-server": "concurrently \"npm run start\" \"npm run json-server\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -17,6 +21,8 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "concurrently": "^9.2.1",
+    "doljak-lib-to-do-list": "^0.0.18",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
